<resources>
    <string name="app_name">Mediaplayer</string>
    <string name="cover_art">Cover art</string>
    <string name="song_title">Song Title</string>
    <string name="author">author</string>
    <string name="minus10_button">Minus10 button</string>
    <string name="play_button">Play button</string>
    <string name="pause_button">Pause Button</string>
    <string name="stop_button">Stop Button</string>
    <string name="next_button">Next button</string>
    <string name="plus10_button">Plus10 button</string>
    <string name="prev_button">Prev button</string>
    <string name="_0_00">0:00</string>
    <string name="music_player">Music Player</string>
    <string name="textview">TextView</string>
    <string name="_3_43">3:43</string>
    <string name="todo">TODO</string>
</resources>